# aggregate

./: Cargo.toml  README.md  config.json
src/: aggregate.rs  config.rs  log.rs  main.rs  task.rs  vinyl.rs
src/processor/: clone.rs  concat.rs  es6.rs  htmlpages.rs  js.rs  mod.rs  swc.rs
src/processor/swc_proc/: Cargo.toml  package.json  test.ts  test2.js
src/processor/swc_proc/src/: lib.rs
src/tests/: graph.rs
