[package]
name = "aggregate"
version = "0.1.0"
authors = ["Timothy Aleem <timothy@precess.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "4.0.15"
glob = "0.3.0"
async-std = { version = "1.6.3", features = ["attributes"] }
futures = "0.3.5"
petgraph = "0.5.1"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
chrono = "0.4.15"