[package]
name = "swc_proc"
version = "0.1.0"
authors = ["Khalid Aleem <me@precess.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4.8"

swc = {git = "https://github.com/swc-project/swc.git"}
swc_bundler = {git = "https://github.com/swc-project/swc.git"}
swc_common = {git = "https://github.com/swc-project/swc.git", features = ["tty-emitter", "sourcemap"]}
swc_atoms = {git = "https://github.com/swc-project/swc.git"}
swc_ecma_ast = {git = "https://github.com/swc-project/swc.git"}
swc_ecma_codegen = {git = "https://github.com/swc-project/swc.git"}
swc_ecma_parser = {git = "https://github.com/swc-project/swc.git"}
swc_ecma_transforms = {git = "https://github.com/swc-project/swc.git", features = ["const-modules"]}
swc_ecma_utils = {git = "https://github.com/swc-project/swc.git"}
swc_ecma_visit = {git = "https://github.com/swc-project/swc.git"}
spack = {git = "https://github.com/swc-project/swc.git"}